<resources>
    <string name="app_name">MealOrderManager</string>
    <string name="money">%1$s $</string>
    <string name="no_meal_data">No data here. Add one\?</string>
    <string name="add_meal">Add Meal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_meal_title">Add Meal</string>

    <string name="input_name_title">Meal Name:</string>
    <string name="input_name_hint">Input Meal Name Here</string>

    <string name="input_price_title">Price:</string>
    <string name="input_price_hint">Input Price Here</string>

    <string name="need_input_name">Need input name.</string>
    <string name="need_input_price">Need input price.</string>
    <string name="need_input_number">Need input price.</string>
</resources>