<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddMealFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_meal_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/input_name_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="15sp"
        android:text="@string/input_name_title"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/input_name_hint"
        android:inputType="text"
        android:textColorHint="#757575"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name_title_textview" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/input_price_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/input_name_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="15sp"
        android:text="@string/input_price_title"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_price_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/input_price_hint"
        app:layout_constraintTop_toBottomOf="@id/input_price_title_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"
        android:textColorHint="#757575"
        android:inputType="numberDecimal"
        android:textSize="15sp"/>

       <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
           android:layout_margin="10dp"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           android:text="@string/add_meal"/>

</androidx.constraintlayout.widget.ConstraintLayout>